# atproto-oauth-tauri

./: .dockerignore  .envrc  Dockerfile  README.md  fly.toml  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: publish-tauri.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: atproto_oauth.rs  errors.rs  lib.rs  main.rs
src/routes/: +layout.ts  +page.svelte
src/routes/.well-known/apple-app-site-association/: +server.ts
src/routes/.well-known/assetlinks/: +server.ts
src/routes/client-metadata/: +server.ts
