[package]
name = "tauri2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
tauri = { version = "2", features = ["isolation"] }
# tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tauri-plugin-fs = "2"
# tauri-plugin-notification = "2"
tauri-plugin-oauth = "2"
# tauri-plugin-sql = { version = "2", features = ["sqlite"] }
oauth2 = "4.4.2"
open = "5.3.2"
reqwest = { version = "0.12.12", features = ["rustls-tls", "json", "blocking"] }
# hickory-client = "0.24.2"
rand = "0.8.5"
thiserror = "2.0.11"
tauri-plugin-deep-link = "2"
serde_path_to_error = "0.1.17"

#Size optimizations
[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

# [target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
# tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
